--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "webpack-vue",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "prepare": "husky install",
-    "lint:lint-staged": "lint-staged"
+    "lint:lint-staged": "lint-staged",
+    "commit": "git-cz",
+    "release": "standard-version"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +15,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
+    "@release-it/conventional-changelog": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "commitizen": "^4.3.0",
@@ -24,6 +27,8 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
     "prettier": "^2.8.8",
+    "release-it": "^15.10.1",
+    "standard-version": "^9.5.0",
     "typescript": "^5.0.4",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.2"
@@ -31,20 +36,19 @@
   "dependencies": {
     "vue": "^3.2.47"
   },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    },
-    "cz-customizable": {
-      "config": "cz-config.js"
-    }
-
-  },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,vue}": [
       "prettier --write",
       "eslint --cache --fix",
       "git add ."
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    },
+    "cz-customizable": {
+      "config": ".cz.config.js"
+    }
   }
 }
