--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "webpack-vue",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "",
   "main": "index.js",
   "scripts": {
     "prepare": "husky install",
     "lint:lint-staged": "lint-staged",
     "commit": "git-cz",
-    "release": "release-it"
+    "release": "release-it",
+    "release:log": "standard-version"
   },
   "keywords": [],
   "author": "",
