--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
     "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
     "husky": "^8.0.3",
@@ -31,6 +32,7 @@
     "release-it": "^15.10.1",
     "standard-version": "^9.5.0",
     "typescript": "^5.0.4",
+    "vue-eslint-parser": "^9.1.1",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.2"
   },
