--- a/package.json
+++ b/package.json
@@ -17,29 +17,41 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@release-it/conventional-changelog": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "babel-loader": "^9.1.2",
     "commitizen": "^4.3.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "core-js": "^3.30.1",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
+    "html-webpack-plugin": "^5.5.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
     "prettier": "^2.8.8",
     "release-it": "^15.10.1",
     "standard-version": "^9.5.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vue-eslint-parser": "^9.1.1",
+    "vue-loader": "^17.1.0",
     "webpack": "^5.80.0",
-    "webpack-cli": "^5.0.2"
+    "webpack-cli": "^5.0.2",
+    "webpack-dev-server": "^4.13.3"
   },
   "dependencies": {
+    "@types/node": "^18.16.2",
     "vue": "^3.2.47"
   },
   "lint-staged": {
