--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env BASE_ENV=dev webpack serve --config  build/webpack.dev.ts",
-    "build": "croess-env BASE_ENV=pro webpack --config build/webpack.prod.ts",
+    "build": "cross-env BASE_ENV=pro webpack --config build/webpack.prod.ts",
     "preview": "serve -s dist -C",
     "prepare": "husky install",
     "lint": "eslint --cache --fix",
@@ -32,6 +32,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.30.1",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.7.3",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
     "dotenv-webpack": "^8.0.1",
@@ -41,11 +42,18 @@
     "eslint-plugin-vue": "^9.11.0",
     "html-webpack-plugin": "^5.5.1",
     "husky": "^8.0.3",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "lint-staged": "^13.2.1",
     "prettier": "^2.8.8",
     "release-it": "^15.10.1",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.2.2",
     "serve": "^14.2.0",
     "standard-version": "^9.5.0",
+    "style-loader": "^3.3.2",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^7.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vue-eslint-parser": "^9.1.1",
