--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@release-it/conventional-changelog": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
     "commitizen": "^4.3.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -45,6 +46,8 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lint-staged": "^13.2.1",
+    "postcss": "^8.4.23",
+    "postcss-loader": "^7.3.0",
     "prettier": "^2.8.8",
     "release-it": "^15.10.1",
     "sass": "^1.62.1",
