--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env BASE_ENV=dev webpack serve --config  build/webpack.dev.ts",
-    "build": "cross-env BASE_ENV=pro webpack --config build/webpack.prod.ts",
+    "dev": "cross-env NODE_ENV=development BASE_ENV=dev webpack serve --config  build/webpack.dev.ts",
+    "build": "cross-env NODE_ENV=production BASE_ENV=pro webpack --config build/webpack.prod.ts",
+    "build:analy": "cross-env NODE_ENV=production BASE_ENV=pro webpack -c build/webpack.analy.ts",
     "preview": "serve -s dist -C",
     "prepare": "husky install",
     "lint": "eslint --cache --fix",
@@ -31,10 +32,12 @@
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
     "commitizen": "^4.3.0",
+    "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.30.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^5.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
     "dotenv-webpack": "^8.0.1",
@@ -47,6 +50,7 @@
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lint-staged": "^13.2.1",
+    "mini-css-extract-plugin": "^2.7.5",
     "postcss": "^8.4.23",
     "postcss-loader": "^7.3.0",
     "prettier": "^2.8.8",
@@ -54,21 +58,27 @@
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "serve": "^14.2.0",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "standard-version": "^9.5.0",
     "style-loader": "^3.3.2",
     "stylus": "^0.59.0",
     "stylus-loader": "^7.1.0",
+    "terser-webpack-plugin": "^5.3.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
     "vue-eslint-parser": "^9.1.1",
-    "vue-loader": "^17.1.0",
+    "vue-loader": "^17.0.1",
     "webpack": "^5.80.0",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.2",
-    "webpack-dev-server": "^4.13.3"
+    "webpack-dev-server": "^4.13.3",
+    "webpackbar": "^5.0.2"
   },
   "dependencies": {
     "@types/dotenv-webpack": "^7.0.3",
     "@types/node": "^18.16.2",
+    "@types/speed-measure-webpack-plugin": "^1.3.4",
+    "@types/webpack-bundle-analyzer": "^4.6.0",
     "axios": "^1.4.0",
     "vue": "^3.2.47"
   },
