--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "terser-webpack-plugin": "^5.3.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
+    "unplugin-vue-define-options": "^1.3.5",
     "vue-eslint-parser": "^9.1.1",
     "vue-loader": "^17.0.1",
     "webpack": "^5.80.0",
