--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "cross-env NODE_ENV=development BASE_ENV=dev webpack serve --config  build/webpack.dev.ts",
     "build": "cross-env NODE_ENV=production BASE_ENV=pro webpack --config build/webpack.prod.ts",
     "build:analy": "cross-env NODE_ENV=production BASE_ENV=pro webpack -c build/webpack.analy.ts",
+    "test:chain": "cross-env NODE_ENV=production ts-node build/webpack.chain.ts",
     "preview": "serve -s dist -C",
     "prepare": "husky install",
     "lint": "eslint --cache --fix",
@@ -57,6 +58,7 @@
     "release-it": "^15.10.1",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
+    "script-ext-html-webpack-plugin": "^2.1.5",
     "serve": "^14.2.0",
     "speed-measure-webpack-plugin": "^1.5.0",
     "standard-version": "^9.5.0",
@@ -71,6 +73,7 @@
     "vue-loader": "^17.0.1",
     "webpack": "^5.80.0",
     "webpack-bundle-analyzer": "^4.8.0",
+    "webpack-chain": "^6.5.1",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3",
     "webpackbar": "^5.0.2"
@@ -78,8 +81,10 @@
   "dependencies": {
     "@types/dotenv-webpack": "^7.0.3",
     "@types/node": "^18.16.2",
+    "@types/script-ext-html-webpack-plugin": "^2.1.3",
     "@types/speed-measure-webpack-plugin": "^1.3.4",
     "@types/webpack-bundle-analyzer": "^4.6.0",
+    "@types/webpack-chain": "^5.2.0",
     "axios": "^1.4.0",
     "vue": "^3.2.47"
   },
