--- a/.babelrc
+++ b/.babelrc
@@ -12,9 +12,11 @@
     [
       "@babel/preset-typescript",
       {
-        "allExtensions": true
+        "isTSX": true, // 必须设置，否者编译tsx时会报错
+        "allowNamespaces": true,
+        "allExtensions": true // 必须设置，否者编译.vue 文件中ts 代码会报错
       }
     ]
   ],
-  "plugins": ["@babel/plugin-transform-runtime"]
+  "plugins": ["@vue/babel-plugin-jsx", ["@babel/plugin-transform-runtime"]]
 }
