--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@release-it/conventional-changelog": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "@vue/babel-plugin-jsx": "^1.1.1",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
+    "chalk": "^5.2.0",
     "commitizen": "^4.3.0",
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -46,12 +48,14 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
+    "execa": "^7.1.1",
     "html-webpack-plugin": "^5.5.1",
     "husky": "^8.0.3",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "lint-staged": "^13.2.1",
     "mini-css-extract-plugin": "^2.7.5",
+    "open": "^9.1.0",
     "postcss": "^8.4.23",
     "postcss-loader": "^7.3.0",
     "prettier": "^2.8.8",
@@ -79,6 +83,7 @@
     "webpackbar": "^5.0.2"
   },
   "dependencies": {
+    "@types/cross-spawn": "^6.0.2",
     "@types/dotenv-webpack": "^7.0.3",
     "@types/node": "^18.16.2",
     "@types/script-ext-html-webpack-plugin": "^2.1.3",
@@ -86,6 +91,8 @@
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@types/webpack-chain": "^5.2.0",
     "axios": "^1.4.0",
+    "cross-spawn": "^7.0.3",
+    "picocolors": "^1.0.0",
     "vue": "^3.2.47"
   },
   "lint-staged": {
