--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "types": ["@types/node"],
-    "target": "esnext",
+    "target": "ESNext",
     "module": "CommonJS",
     "moduleResolution": "node",
     "strict": true,
@@ -33,7 +33,7 @@
     "types/**/*.ts",
     "build/**/*.ts",
     "build/**/*.d.ts"
-  ],
+, "build/browser/index.js"  ],
   "exclude": ["node_modules", "dist", "**/*.js"],
   "ts-node": {
     "logError": true,
